--- a/Views/parcel_form.cshtml
+++ b/Views/parcel_form.cshtml
@@ -4,6 +4,23 @@
 
 <div class="container">
   <h1>Parcel Form</h1>
-  <form>
+  <form action="/parcel-receipt">
+    <div class="form-group">
+      <label for="length">Length:</label>
+      <input type="number" name="length" class="form-control" id="length">
+    </div>
+    <div class="form-group">
+      <label for="width">Width</label>
+      <input type="number" name="width" class="form-control" id="width">
+    </div>
+    <div class="form-group">
+      <label for="height">Height</label>
+      <input type="number" name="height" id="height" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="weight">Weight</label>
+      <input type="number" name="weight" class="form-control" id="weight">
+    </div>
+    <button type="submit" class="btn btn-info">Submit</button>
   </form>
 </div>
