add view to display the user inputs back to the user and run GetVolume and GetCostToShip fns, change HomeModule.cs to properly route to views and pass in variable representing user variables

--- a/Views/parcel_form.cshtml
+++ b/Views/parcel_form.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
   <h1>Parcel Form</h1>
-  <form action="/parcel-receipt">
+  <form action="/parcel_receipt">
     <div class="form-group">
       <label for="length">Length:</label>
       <input type="number" name="length" class="form-control" id="length">
